package org.springframework.beans.factory;

import org.springframework.beans.BeanFactory;

public interface HierarchicalBeanFactory extends BeanFactory {
}
