package org.springframework.beans.factory.config;

import org.springframework.beans.BeanFactory;

public interface AutowireCapableBeanFactory extends BeanFactory {
}
